adding file upload

--- a/views/fileUpload.ejs
+++ b/views/fileUpload.ejs
@@ -5,10 +5,11 @@
     <title></title>
 </head>
 <body>
-    <form id="uploadForm" enctype="multipart/form-data" method="post">
+    <form id="uploadForm" enctype="multipart/form-data" method="post" action="/fileUpload">
         <input type="file" name="userFile" />
         <input type="submit" value="Upload File" name="submit">
     </form>
+
     <li><a href="/logout">Logout</a></li>
 </body>
 </html>
