--- a/public/style.css
+++ b/public/style.css
@@ -19,6 +19,15 @@ input{
 	border: none;
 	border-bottom: 2px solid #767474;
 }
+li{
+	font-family: 'Helvetica', serif;
+	width: 100%;
+	font-size: 20px;
+	padding: 12px 20px;
+	margin: 8px 0;
+	border: none;
+	border-bottom: 2px solid #767474;
+}
 input[type=submit] {
 	font-family: 'Helvetica', serif;
 	width: 100%;
