--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,42 @@
-<h1>This is home page</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Home Page </title>
 
-<li><a href="/register">Sign up!!</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+
+<link rel="stylesheet"
+href=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+integrity=
+"sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="/style.css">
+
+</head>
+<body>
+  <center><h1>Home Page</h1></center>
+	<br>
+	<br>
+	<br>
+	<div class="container" >
+		<div class="row">
+		<div class="col-md-3">
+
+		</div>
+
+		<div class="col-md-6 main">
+
+      <li class="box"><a class="box" href="/register">Sign up</a></li>
+      <li class="box"><a class="box" href="/login">Login</a></li>
+
+		</div>
+
+
+		<div class="col-md-3">
+		</div>
+
+	</div>
+	</div>
+</body>
+</html>
