--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,51 @@
-<h1> Sign up form </h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Signup Form</title>
 
-<form action="/register" method="POST">
-	<input type="text" name="username"
-		placeholder="username">
-	<input type="password" name="password"
-		placeholder="password">
-	<button>Submit</button>
-</form>
 
-<h1>This is home page</h1>
+<link rel="stylesheet"
+href=
+"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+integrity=
+"sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+crossorigin="anonymous">
 
-<li><a href="/register">Sign up!!</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<link rel="stylesheet" type="text/css" href="/style.css">
+
+</head>
+<body>
+
+	<br>
+	<br>
+	<br>
+	<div class="container" >
+		<div class="row">
+		<div class="col-md-3">
+
+		</div>
+
+		<div class="col-md-6 main">
+
+			<form action="/register" method="post">
+
+			<h1> Signup form </h1>
+
+			<input class="box" type="text" name="username" id="username" placeholder="Name" required /><br>
+
+			<input class="box" type="password" name="password" id="password" placeholder="Password " required/><br>
+
+			<input class="box" type="submit" id="submitDetails"	name="submitDetails" value="Submit" /><br>
+
+			</form>
+
+		</div>
+
+
+		<div class="col-md-3">
+		</div>
+
+	</div>
+	</div>
+</body>
+</html>
